# transcribe-journal

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  transcribe-journal.service  transcribe-server.service  transcribe-watcher.service  watcher.py
server/: DEPLOYMENT.md  __init__.py  server.py
server/models/: PUT_STT_MODEL_HERE.txt
watcher/: __init__.py  watcher.py
