[project]
name = "transcribe-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Peter Mason", email = "peter@petermason.me" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = ["Programming Language :: Python :: 3", "Natural Language :: English"]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "creosote>=4.1.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length   = 120
output-format = "concise"

[tool.ruff.lint] # Ruff linting rules found at https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (conflicts with ruff's formatter)
    "D203",    # Missing blank line after class docstring (alternative to D211)
    "D213",    # Docstring summary should start on the second line (alternative to D212)
    "EM",      # Assign exception strings to variables before raising them
    "ERA",     # Avoid commented-out code; check during CI/CD instead
    "F401",    # Avoid unused imports (check during pre-commit instead and CI/CD instead)
    "FBT001",  # Avoid positional boolean arguments, checked via type hints
    "FBT002",  # Avoid positional boolean arguments, checked via default values
    "FIX002",  # Avoid TODO comments
    "G004",    # Avoid f-strings in logging statements
    "PLR2004", # Avoid magic values in comparisons
    "S603",    # Avoid subprocess calls without validated input (prone to false positives)
    "S607",    # Avoid starting a process with a partial executable path
    "TD002",   # Missing author in TODO comment
    "TRY003",  # Avoid long exception messages outside the exception class

    "S501",
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ # Tests can have assert statements and no __init__.py files
    "INP001",
    "S101",
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
reportArgumentType      = false
reportOptionalSubscript = false

[tool.pytest.ini_options] # Pytest config options found at https://docs.pytest.org/en/stable/reference/customize.html
testpaths = ["tests"]
