[project]
name = "transcribe-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Peter Mason", email = "peter@petermason.me" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = ["Programming Language :: Python :: 3", "Natural Language :: English"]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "peft>=0.18.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",

]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
torchaudio = [
    { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "creosote>=4.1.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "ty>=0.0.31",
]

[tool.ruff]
line-length   = 120
output-format = "concise"

[tool.ruff.lint] # Ruff linting rules found at https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (conflicts with ruff's formatter)
    "D203",    # Missing blank line after class docstring (alternative to D211)
    "D213",    # Docstring summary should start on the second line (alternative to D212)
    "EM",      # Assign exception strings to variables before raising them
    "ERA",     # Avoid commented-out code; check during CI/CD instead
    "F401",    # Avoid unused imports (check during pre-commit instead and CI/CD instead)
    "FBT001",  # Avoid positional boolean arguments, checked via type hints
    "FBT002",  # Avoid positional boolean arguments, checked via default values
    "FIX002",  # Avoid TODO comments
    "G004",    # Avoid f-strings in logging statements
    "PLR2004", # Avoid magic values in comparisons
    "S603",    # Avoid subprocess calls without validated input (prone to false positives)
    "S607",    # Avoid starting a process with a partial executable path
    "TD002",   # Missing author in TODO comment
    "TRY003",  # Avoid long exception messages outside the exception class

    "S501",
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ # Tests can have assert statements and no __init__.py files
    "INP001",
    "S101",
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.terminal]
output-format = "concise"
